tdf#153000: file types MSO_SPT=25 to 31 are wrongly rendered

Description and analysis with MS ref + code pointer + solution here:
https://bugs.documentfoundation.org/show_bug.cgi?id=153000#c0
all this thanks to Regina.

Change-Id: I63a66e075bc67e3c7d833756026933b3447d0cd8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145491
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 11319f419988443af85cf3c60dbed12d67fc183f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145449
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>